2011-06-27  Pavel Feldman  <pfeldman@google.com>

Reviewed by Yury Semikhatsky.

        Web Inspector: [REGRESSION r84481] updateLayout called from DrawNodeHighlight
        https://bugs.webkit.org/show_bug.cgi?id=63405

        We should not call layout from paint.

        * inspector/DOMNodeHighlighter.cpp:
        (WebCore::DOMNodeHighlighter::drawNodeHighlight):
        * inspector/DOMNodeHighlighter.h:
        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::drawNodeHighlight):

Canonical link: https://commits.webkit.org/79111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89815 268f45cc-cd09-0410-ab3c-d52691b4dbfc